resources/assets/less/frontend/theme.less
/* ... */
/***********************
WHERE MAGIC HAPPENS
**********************/

html {
	height: 100vh; /* set viewport constraint */
	min-height: 100%; /* enforce height */
}

.background-image-holder{
	-webkit-background-size: cover; /* safari may need this */
}

#feedback-icon{
	background: url("../images/feedback.svg") 0 0 no-repeat;
	height: 100px;
	width: 102px;
	position: fixed;
	bottom: 0;
	right: 0;
	z-index: 10;
}
#feedback-icon:after {
	content: "";
	opacity: 0;
	display:block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: url("../images/feedback-hover.svg") 0 0 no-repeat;
	-moz-transition: all .4s ease;
	-webkit-transition: all .4s ease;
	-ms-transition: all .4s ease;
	-o-transition: all .4s ease;
	transition: all .4s ease;
}
#feedback-icon:hover:after {
	opacity: 1;
}

div.simplicity {
	width: 523px;
	height: 117px;
	margin-right: 13px;
	background-size: 100% 100%;
	display: inline-block;
	margin-bottom: -23px;
}

.follow-us {
	height: 30px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: -webkit-flex;
	display: flex;
}
.follow-us p {
	display: inline-block;
	color: #939393;
	font-family: "Raleway","Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.social-icon {
	display: inline-block;
	max-height: 100%;
	width: 26px;
	height:26px;
	margin-left: 5px;
	position: relative;
	-webkit-transition: background 0.3s ease-in-out;
	-moz-transition: background 0.3s ease-in-out;
	-ms-transition: background 0.3s ease-in-out;
	-o-transition: background 0.3s ease-in-out;
	transition: background 0.3s ease-in-out;
	-webkit-backface-visibility: hidden;
	-webkit-transform: translateZ(0) scale(1.0, 1.0);
}

.social-icon:after {
	content: "";
	opacity: 0;
	display:block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	-moz-transition: all .4s ease;
	-webkit-transition: all .4s ease;
	-ms-transition: all .4s ease;
	-o-transition: all .4s ease;
	transition: all .4s ease;
}
.social-icon:hover:after {
	opacity: 1;
}

div.social-icon.face {
	background: url("../images/FB-icon.svg") 0 0 no-repeat transparent;
}
div.social-icon.face:after {
	background: url("../images/FB-icon-hover.svg") 0 0 no-repeat transparent;
}
div.social-icon.gplus {
	background: url("../images/G+-icon.svg") 0 0 no-repeat transparent;
}
div.social-icon.gplus:after {
	background: url("../images/G+-icon-hover.svg") 0 0 no-repeat transparent;
}
div.social-icon.twit {
	background: url("../images/TWITTER-icon.svg") 0 0 no-repeat transparent;
}
div.social-icon.twit:after {
	background: url("../images/TWITTER-icon-hover.svg") 0 0 no-repeat transparent;
}
div.social-icon.inst {
	background: url("../images/INSTAGRAM-icon.svg") 0 0 no-repeat transparent;
}
div.social-icon.inst:after {
	background: url("../images/INSTAGRAM-icon-hover.svg") 0 0 no-repeat transparent;
}

ul.slides li.overlay:before {
	content: initial;
}

.vid-bg,
ul.slides,
.image-slider .slides {
	background: transparent;
}
/*
body.front-page {
    background: url("../images/black-satin.jpg") no-repeat;
}
*/
body {
	background: #666;
}

.footer-logo {
	width: 154px;
	height: 111px;
	background: url("../images/SS-ICON.svg") 0 0 no-repeat transparent;
	display: block;
	position: absolute;
	margin: auto;
	top: 61px;
	right: 6%;
	opacity: 0.5;
}
.footer-logo:after {
	content: "";
	opacity: 0;
	display:block;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	-moz-transition: all .4s ease;
	-webkit-transition: all .4s ease;
	-ms-transition: all .4s ease;
	-o-transition: all .4s ease;
	transition: all .4s ease;
	background: url("../images/SS-ICON-hover.svg") 0 0 no-repeat transparent;
}

.footer-logo:hover:after {
	opacity: 1;
}
footer .container {
	margin-left: 11.30%;
}
footer h5 {
	font-size: 14px;
}
footer span.company-color {
	color: #c0c0c0;
}

/************** LOGIN POPUP *************/

.login-header-back {
	width: 100%;
	height: 105px;
	background-color: #f3f2f2;
	position: absolute;
	top:0;
	left: 0;
}

.ftw600 {
	font-weight: 600;
}

.login-header {
	width: 260px;
	height: 43px;
	position: absolute;
	bottom: 20px;
	left: 48px;

		img {
			max-height: 100%;
			width: 58px;
			display: inline-block;
			float: left;
		}
		img, h5, p {
			margin-bottom: 0;
		}
		h5 {
			top: 8px;
			left: 47px;
			font-size: 22px;
			position: absolute;
			color: #808080;
			letter-spacing: 0.1em;
		}
		p {
			position: absolute;
			bottom: 0;
			left: 61px;
			line-height: 12px;
			color: #9B999A;
		}
}

a.btn.google,
input[value="Log in"],
a.btn.facebook,
a.btn.twitter {
	background-repeat: no-repeat;
	background-position: 15px 50%;

}

input[value="Log in"] {
	background-image: url("../images/s-login.svg");
	background-size: 32px;
}
a.btn.google {
	background-image: url("../images/g-login.svg");
	background-size: 33px;
}
a.btn.facebook {
	background-image: url("../images/f-login.svg");
	background-size: 17px 22px;
}
a.btn.twitter {
	background-image: url("../images/twitter-login.svg");
	background-size: 25px;
}

/********** QUESTION POPUP *************/

.image-info-block p {
	margin-bottom: 0;
	text-align: left;
	line-height: 20px;

		strong {
			color: #00B570;
		}
}

.image-upload.ask {
	width: 32%;
	display: inline-block;
		.drop-zone {
			width: 100%;
			padding-bottom: 100%;
		}
		.image-actions {
			width: 100%;
		}
		.btn {
			min-width: initial !important;
			width: 100%;
		}
}

.foundry_modal[modal-link="2"],
.foundry_modal[modal-link="3"]{
	padding-bottom: 48px;
}

/************************
DESKTOP FIXES
*****************************/

/*** main ***/

@media all and (max-width: 1450px) {
	footer .ml14proc {
		margin-left: 9%;
	}
}
/* ... */

